2014/10/20: IGAS v67
    1. Using GUID to mark the Timer, make sure older call would be stoped.

2014/10/20: IGAS v66
    1. Remove the queue system from the Timer, it's too complex and the error can't be fixed, using the Task.DelayCall for the Timer.

2014/10/20: IGAS v65
    1. Fix a synatx error cause lua error when pick up item.

2014/10/20: IGAS v64
    1. Fix the flyout aciton not work well when reload.

2014/10/19: IGAS v63
    1. The mount wouldn't be usable during combat.

2014/10/18: IGAS v62
    1. Add support to summon random favorite mount spell

2014/10/18: IGAS v61
    1. The Mask will use the target's min & max resize to make sure not errors.

2014/10/18: IGAS v60
    1. Use a more smooth method to handle the mount and toy actions.

2014/10/17: IGAS v58
    1. Fix mount action type, and toy action is added.

2013/11/24: IGAS v56
    1. Fix some mount can't be used in the action system.
    2. Now active layout would be displayed correctly for actived mount.
    3. World marker is added to the action system.

2013/11/13: IGAS v55
    1. Constructor system rebuild.
    2. Init-table system rebuild.
    3. All class files update for the new system.
    4. Overload system added for methods, constructors and meta-methods.

2013/10/20: IGAS v54
    1. New property auto fill system. new independence definition environment.
    2. Fix IFResurrect error.

2013/10/20: IGAS v53
    1. New NoUnitWatch property for UnitFrame, resuce cost for the SecureStateDriver.
    2. IFGroup support a mode only show dead players.

2013/10/18: IGAS v52
    1. Fix the problem that can't use left & right arrow keys when using up & down arrow in a auto-complete list for the MultiLineTextBox

2013/10/07: IGAS v51
    1. Using thread pool to reduce cost of the thread usage.
    2. Fix memory cost for IFClassPower for no use nil var search, resuce memory increment.

2013/10/06: IGAS v50
    1. Fix the scoll position when press enter at the last line of a CodeEditor.
